--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "element-ui": "^2.15.14",
+    "infinite-scroll-table": "^2.2.4",
     "vue": "^2.7.7",
-    "vue-easytable": "^2.27.1"
+    "vue-easytable": "^2.27.1",
+    "vue-virtual-scroller": "^1.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
